// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box supports appropriate element props based on "as" prop 1`] = `
.emotion-0 {
  font-family: ;
  box-sizing: border-box;
}

<a
  className="emotion-0"
  href="lol"
/>
`;

exports[`Box supports appropriate element props based on "as" prop 2`] = `
.emotion-0 {
  font-family: ;
  box-sizing: border-box;
}

<img
  className="emotion-0"
  src="lol"
/>
`;

exports[`Box supports generic style props such as borderTop with or without "as" 1`] = `
.emotion-0 {
  font-family: ;
  box-sizing: border-box;
  border-top: 42;
}

<div
  className="emotion-0"
/>
`;

exports[`Box supports generic style props such as borderTop with or without "as" 2`] = `
.emotion-0 {
  font-family: ;
  box-sizing: border-box;
  border-top: 42;
}

<a
  className="emotion-0"
/>
`;
